update facilities page & update images

--- a/app/views/facilities/bolt.html.erb
+++ b/app/views/facilities/bolt.html.erb
@@ -23,36 +23,36 @@
                 </section><!--//widget-->
           </aside>
           <div class="content-wrapper col-md-5 col-sm-4">
-            <ul class="custom-list-style">
-              <li><i class="fa fa-star"></i>½ 4B4D x 4” = 5 Sets</li>
-              <li><i class="fa fa-star"></i>½ 5B5D x 6” = 3 Sets</li>
-              <li><i class="fa fa-star"></i>5/8 4B4D x 6” = 1 Set</li>
-              <li><i class="fa fa-star"></i>5/8 5B5D x 6” = 1 Set</li>
-              <li><i class="fa fa-star"></i>¾ 4B4D x 6” = 1 Set</li>
-              <li><i class="fa fa-star"></i>5/16 3B3D x 2” = 3 Sets</li>
-              <li><i class="fa fa-star"></i>5/16 4B4D x 3” = 1 Set</li>
-              <li><i class="fa fa-star"></i>3/8 Tubular Rivet Machine = 2 Sets</li>
-              <li><i class="fa fa-star"></i>5/16 Tubular Rivet Machine = 9 Sets</li>
-              <li><i class="fa fa-star"></i>3/16 Tubular Rivet Machine = 2 Sets</li>
-              <li><i class="fa fa-star"></i>Wire Diameter = 3.0 – 30.0 mm</li>
-              <li><i class="fa fa-star"></i>Flange Diameter = 65 mm Max</li>
-            </ul>
+
+            <div class="table-responsive">
+              <table class="table table-striped">
+                <tbody>
+                  <tr><td class="list-font-size">½ 4B4D x 4” = 5 Sets</td></tr>
+                  <tr><td class="list-font-size">½ 5B5D x 6” = 3 Sets</td></tr>
+                  <tr><td class="list-font-size">5/8 4B4D x 6” = 1 Set</td></tr>
+                  <tr><td class="list-font-size">5/8 5B5D x 6” = 1 Set</td></tr>
+                  <tr><td class="list-font-size">¾ 4B4D x 6” = 1 Set</td></tr>
+                  <tr><td class="list-font-size">5/16 3B3D x 2” = 3 Sets</td></tr>
+                  <tr><td class="list-font-size">5/16 4B4D x 3” = 1 Set</td></tr>
+                  <tr><td class="list-font-size">3/8 Tubular Rivet Machine = 2 Sets</td></tr>
+                  <tr><td class="list-font-size">5/16 Tubular Rivet Machine = 9 Sets</td></tr>
+                  <tr><td class="list-font-size">3/16 Tubular Rivet Machine = 2 Sets</td></tr>
+                  <tr><td class="list-font-size">Wire Diameter = 3.0 – 30.0 mm</td></tr>
+                  <tr><td class="list-font-size">Flange Diameter = 65 mm Max</td></tr>
+                </tbody>
+              </table>
+            </div>
           </div>
           <div class="content-wrapper col-md-5 col-sm-4">
             <img class="img-responsive" src="<%= asset_path "facilities/bolt.png"%>" alt=""/>
             <br />
-          </div>
-        </div>
-
-        <div class="row page-row">
-          <aside class="page-sidebar col-md-2 col-sm-4 affix-top"></aside>
-          <div class="col-md-8 panel panel-default" style="left:60px;"><!--//video-->
+          <div class="panel panel-default" style="left:60px;"><!--//video-->
             <section class="video panel-body">
               <div class="section-content">
                 <div id="videos-carousel" class="videos-carousel carousel slide">
                   <div class="carousel-inner">
                     <div class="item active" align="center">
-                      <iframe class="video-iframe" src="//www.youtube.com/embed/7htZkSe-MfY?rel=0&amp;wmode=transparent" frameborder="0" allowfullscreen="" width="100%" height="480" ></iframe>
+                      <iframe class="video-iframe" src="//www.youtube.com/embed/7htZkSe-MfY?rel=0&amp;wmode=transparent" frameborder="0" allowfullscreen="" width="100%" height="360" ></iframe>
                     </div>
                   </div>
                 </div><!--//videos-carousel-->
@@ -60,7 +60,7 @@
               </div><!--//section-content-->
             </section>
           </div>
-          <aside class="page-sidebar col-md-3 col-sm-4 affix-top"></aside>
+          </div>
         </div>
       </div>
     </div>
