--- a/app/views/facilities/stamping.html.erb
+++ b/app/views/facilities/stamping.html.erb
@@ -23,34 +23,34 @@
             </section><!--//widget-->
           </aside>
           <div class="content-wrapper col-md-5 col-sm-4">
-            <ul class="custom-list-style">
-              <li><i class="fa fa-star"></i>200 tons – 2 Sets</li>
-              <li><i class="fa fa-star"></i>160 tons – 3 Sets</li>
-              <li><i class="fa fa-star"></i>110 tons – 11 Sets</li>
-              <li><i class="fa fa-star"></i>80 tons – 7 Sets</li>
-              <li><i class="fa fa-star"></i>60 tons – 2 Sets</li>
-              <li><i class="fa fa-star"></i>45 tons – 22 Sets</li>
-              <li><i class="fa fa-star"></i>35 tons – 5 Sets</li>
-              <li><i class="fa fa-star"></i>200 tons – 3 Sets</li>
-              <li><i class="fa fa-star"></i>260 tons – 2 Sets</li>
-              <li><i class="fa fa-star"></i>350 tons – 1 Sets</li>
-              <li><i class="fa fa-star"></i>400 tons – 1 Sets</li>
-            </ul>
+            <div class="table-responsive">
+             <table class="table table-striped">
+               <tbody>
+                 <tr><td class="list-font-size">200 tons – 2 Sets</td></tr>
+                 <tr><td class="list-font-size">160 tons – 3 Sets</td></tr>
+                 <tr><td class="list-font-size">110 tons – 11 Sets</td></tr>
+                 <tr><td class="list-font-size">80 tons – 7 Sets</td></tr>
+                 <tr><td class="list-font-size">60 tons – 2 Sets</td></tr>
+                 <tr><td class="list-font-size">45 tons – 22 Sets</td></tr>
+                 <tr><td class="list-font-size">35 tons – 5 Sets</td></tr>
+                 <tr><td class="list-font-size">200 tons – 3 Sets</td></tr>
+                 <tr><td class="list-font-size">260 tons – 2 Sets</td></tr>
+                 <tr><td class="list-font-size">350 tons – 1 Sets</td></tr>
+                 <tr><td class="list-font-size">400 tons – 1 Sets</td></tr>
+               </tbody>
+             </table>
+            </div>
           </div>
           <div class="content-wrapper col-md-5 col-sm-4">
             <img class="img-responsive" src="<%= asset_path "facilities/stamping.png"%>" alt=""/>
             <br />
-          </div>
-        </div>
-        <div class="row page-row">
-          <aside class="page-sidebar col-md-2 col-sm-4 affix-top"></aside>
-          <div class="col-md-8 panel panel-default" style="left:60px;"><!--//video-->
+          <div class="panel panel-default" style="left:60px;"><!--//video-->
             <section class="video panel-body">
               <div class="section-content">
                 <div id="videos-carousel" class="videos-carousel carousel slide">
                   <div class="carousel-inner">
                     <div class="item active" align="center">
-                      <iframe class="video-iframe" src="//www.youtube.com/embed/pQRZ8dWAcUg?rel=0&amp;wmode=transparent" frameborder="0" allowfullscreen="" width="100%" height="480" ></iframe>
+                      <iframe class="video-iframe" src="//www.youtube.com/embed/pQRZ8dWAcUg?rel=0&amp;wmode=transparent" frameborder="0" allowfullscreen="" width="100%" height="360" ></iframe>
                     </div>
                   </div>
                 </div><!--//videos-carousel-->
@@ -58,7 +58,8 @@
               </div><!--//section-content-->
             </section>
           </div>
-          <aside class="page-sidebar col-md-3 col-sm-4 affix-top"></aside>
+
+          </div>
         </div>
     </div>
   </div>
