--- a/app/views/facilities/nut.html.erb
+++ b/app/views/facilities/nut.html.erb
@@ -23,38 +23,38 @@
             </section><!--//widget-->
           </aside>
           <div class="content-wrapper col-md-5 col-sm-4">
-            <ul class="custom-list-style">
-              <li><i class="fa fa-star"></i>11B= 6 Sets</li>
-              <li><i class="fa fa-star"></i>14B= 9 Sets</li>
-              <li><i class="fa fa-star"></i>19B= 5 Sets</li>
-              <li><i class="fa fa-star"></i>22B= 1 Set</li>
-              <li><i class="fa fa-star"></i>24B= 3 Sets</li>
-              <li><i class="fa fa-star"></i>27B= 1 Set</li>
-              <li><i class="fa fa-star"></i>33B= 1 Set</li>
-            </ul>
+           <div class="table-responsive">
+             <table class="table table-striped">
+               <tbody>
+                 <tr><td class="list-font-size">11B= 6 Sets</td></tr>
+                 <tr><td class="list-font-size">14B= 9 Sets</td></tr>
+                 <tr><td class="list-font-size">19B= 5 Sets</td></tr>
+                 <tr><td class="list-font-size">22B= 1 Set</td></tr>
+                 <tr><td class="list-font-size">24B= 3 Sets</td></tr>
+                 <tr><td class="list-font-size">27B= 1 Set</td></tr>
+                 <tr><td class="list-font-size">33B= 1 Set</td></tr>
+               </tbody>
+             </table>
+           </div>
           </div>
           <div class="content-wrapper col-md-5 col-sm-4">
             <img class="img-responsive" src="<%= asset_path "facilities/nut.png"%>" alt=""/>
             <br />
-          </div>
-        </div>
-        <div class="row page-row">
-          <aside class="page-sidebar col-md-2 col-sm-4 affix-top"></aside>
-          <div class="col-md-8 panel panel-default" style="left:60px;"><!--//video-->
-            <section class="video panel-body">
-              <div class="section-content">
-                <div id="videos-carousel" class="videos-carousel carousel slide">
-                  <div class="carousel-inner">
-                    <div class="item active" align="center">
-                      <iframe class="video-iframe" src="//www.youtube.com/embed/IOsvXA_L35I?rel=0&amp;wmode=transparent" frameborder="0" allowfullscreen="" width="100%" height="480" ></iframe>
+            <div class="panel panel-default" style="left:60px;"><!--//video-->
+              <section class="video panel-body">
+                <div class="section-content">
+                  <div id="videos-carousel" class="videos-carousel carousel slide">
+                    <div class="carousel-inner">
+                      <div class="item active" align="center">
+                        <iframe class="video-iframe" src="//www.youtube.com/embed/IOsvXA_L35I?rel=0&amp;wmode=transparent" frameborder="0" allowfullscreen="" width="100%" height="360" ></iframe>
+                      </div>
                     </div>
-                  </div>
-                </div><!--//videos-carousel-->
-                <p class="description"></p>
-              </div><!--//section-content-->
-            </section>
+                  </div><!--//videos-carousel-->
+                  <p class="description"></p>
+                </div><!--//section-content-->
+              </section>
+            </div>
           </div>
-          <aside class="page-sidebar col-md-3 col-sm-4 affix-top"></aside>
         </div>
       </div>
     </div>
