update homepage content

--- a/app/views/facilities/bolt.html.erb
+++ b/app/views/facilities/bolt.html.erb
@@ -15,7 +15,7 @@
         <div class="row page-row">
             <aside class="page-sidebar col-md-2 col-sm-4 affix-top">
             <section class="widget">
-                <ul class="nav">
+                <ul class="nav custom_font">
                   <li class="active"><a href="/facilities/bolt">Bolt Facility</a></li>
                   <li><a href="/facilities/nut">Nut Facility</a></li>
                   <li><a href="/facilities/stamping">Stamping Facility</a></li>
