--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -32,16 +32,25 @@
 
           <div class="row">
            <div class="col-md-12">
-              <h3 style="color: rgb(0,116,122)">HOW FASTENERS ARE MADE</h3>
+              <h3 style="color: rgb(0,116,122)">Locksure's Manufacturing Capabilities</h3>
               <div class="row">
                 <div class="col-md-2">
                   <img class="img-responsive" src="<%= asset_path "boltforming.png"%>" alt=""/>
                 </div>
                 <article class="col-md-6">
                   <h4>Bolt Forming</h4>
-                  <p>Founded in 1984, Locksure has been the leading special parts supplier in fastener industry. Product ranges from special cold formed parts to parts with secondary operation & assembly.</p>
-                  <p>As the industry evolves, Locksure start supplying automotive parts to Tier1 & Tier2 automotive customers including BMW, Gestamp, Faurecia, Lear & Brose etc. To better serve the needs of quality-oriented automotive customers, Locksure is now in the process of TS16949 certification. We also invest in 3 factories that strengthen our manufacturing capabilities and product variety.</p>
-                  <p>Having over 30 years of experience exporting to USA, Europe, South America & Middle East, Locksure can provide you all the service you need. With a wide range of product lines, great special part developing capability and strict quality control. Locksure is your best choice for automotive fasteners</p>
+                    <p><i class="fa fa-star"></i> ½ 4B4D x 4” = 5 Sets</p>
+                    <p><i class="fa fa-star"></i> ½ 5B5D x 6” = 3 Sets</p>
+                    <p><i class="fa fa-star"></i> 5/8 4B4D x 6” = 1 Set</p>
+                    <p><i class="fa fa-star"></i> 5/8 5B5D x 6” = 1 Set</p>
+                    <p><i class="fa fa-star"></i> ¾ 4B4D x 6” = 1 Set</p>
+                    <p><i class="fa fa-star"></i> 5/16 3B3D x 2” = 3 Sets</p>
+                    <p><i class="fa fa-star"></i> 5/16 4B4D x 3” = 1 Set</p>
+                    <p><i class="fa fa-star"></i> 3/8 Tubular Rivet Machine = 2 Sets</p>
+                    <p><i class="fa fa-star"></i> 5/16 Tubular Rivet Machine = 9 Sets</p>
+                    <p><i class="fa fa-star"></i> 3/16 Tubular Rivet Machine = 2 Sets</p>
+                    <p><i class="fa fa-star"></i> Wire Diameter = 3.0 – 30.0 mm</p>
+                    <p><i class="fa fa-star"></i> Flange Diameter = 65 mm Max</p>
                 </article>
                 <div class="col-md-4">
                   <section class="video">
@@ -63,9 +72,13 @@
                 </div>
                 <article class="col-md-6">
                   <h4>Nut</h4>
-                  <p>Founded in 1984, Locksure has been the leading special parts supplier in fastener industry. Product ranges from special cold formed parts to parts with secondary operation & assembly.</p>
-                  <p>As the industry evolves, Locksure start supplying automotive parts to Tier1 & Tier2 automotive customers including BMW, Gestamp, Faurecia, Lear & Brose etc. To better serve the needs of quality-oriented automotive customers, Locksure is now in the process of TS16949 certification. We also invest in 3 factories that strengthen our manufacturing capabilities and product variety.</p>
-                  <p>Having over 30 years of experience exporting to USA, Europe, South America & Middle East, Locksure can provide you all the service you need. With a wide range of product lines, great special part developing capability and strict quality control. Locksure is your best choice for automotive fasteners</p>
+                  <p><i class="fa fa-star"></i> 11B= 6 Sets</li>
+                  <p><i class="fa fa-star"></i> 14B= 9 Sets</li>
+                  <p><i class="fa fa-star"></i> 19B= 5 Sets</li>
+                  <p><i class="fa fa-star"></i> 22B= 1 Set</li>
+                  <p><i class="fa fa-star"></i> 24B= 3 Sets</li>
+                  <p><i class="fa fa-star"></i> 27B= 1 Set</li>
+                  <p><i class="fa fa-star"></i> 33B= 1 Set</li>
                 </article>
                   <div class="col-md-4">
                 <section class="video">
@@ -87,9 +100,17 @@
                 </div>
                 <article class="col-md-6">
                   <h4>Stamping</h4>
-                  <p>Founded in 1984, Locksure has been the leading special parts supplier in fastener industry. Product ranges from special cold formed parts to parts with secondary operation & assembly.</p>
-                  <p>As the industry evolves, Locksure start supplying automotive parts to Tier1 & Tier2 automotive customers including BMW, Gestamp, Faurecia, Lear & Brose etc. To better serve the needs of quality-oriented automotive customers, Locksure is now in the process of TS16949 certification. We also invest in 3 factories that strengthen our manufacturing capabilities and product variety.</p>
-                  <p>Having over 30 years of experience exporting to USA, Europe, South America & Middle East, Locksure can provide you all the service you need. With a wide range of product lines, great special part developing capability and strict quality control. Locksure is your best choice for automotive fasteners</p>
+                  <p><i class="fa fa-star"></i> 200 tons – 2 Sets</p>
+                  <p><i class="fa fa-star"></i> 160 tons – 3 Sets</p>
+                  <p><i class="fa fa-star"></i> 110 tons – 11 Sets</p>
+                  <p><i class="fa fa-star"></i> 80 tons – 7 Sets</p>
+                  <p><i class="fa fa-star"></i> 60 tons – 2 Sets</p>
+                  <p><i class="fa fa-star"></i> 45 tons – 22 Sets</p>
+                  <p><i class="fa fa-star"></i> 35 tons – 5 Sets</p>
+                  <p><i class="fa fa-star"></i> 200 tons – 3 Sets</p>
+                  <p><i class="fa fa-star"></i> 260 tons – 2 Sets</p>
+                  <p><i class="fa fa-star"></i> 350 tons – 1 Sets</p>
+                  <p><i class="fa fa-star"></i> 400 tons – 1 Sets</p>
                 </article>
                 <div class="col-md-4">
                   <section class="video">
