modify homepage & add favicon

--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -2013,3 +2013,10 @@ ul.custom-list-style li {
     width: 255px;
   }
 }
+.video {
+  margin-top: 44px;
+}
+.custom_logo {
+  margin-top:100px;
+  margin-left: -14px;
+}
