--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -35,9 +35,9 @@
               <h3 style="color: rgb(0,116,122)">Locksure's Manufacturing Capabilities</h3>
               <div class="row">
                 <div class="col-md-2">
-                  <img class="img-responsive" src="<%= asset_path "boltforming.png"%>" alt=""/>
+                  <img class="img-responsive custom_logo" src="<%= asset_path "boltforming.png"%>" alt=""/>
                 </div>
-                <article class="col-md-6">
+                <article class="col-md-4">
                   <h4>Bolt Forming</h4>
                     <p><i class="fa fa-star"></i> ½ 4B4D x 4” = 5 Sets</p>
                     <p><i class="fa fa-star"></i> ½ 5B5D x 6” = 3 Sets</p>
@@ -52,7 +52,7 @@
                     <p><i class="fa fa-star"></i> Wire Diameter = 3.0 – 30.0 mm</p>
                     <p><i class="fa fa-star"></i> Flange Diameter = 65 mm Max</p>
                 </article>
-                <div class="col-md-4">
+                <div class="col-md-6">
                   <section class="video">
                     <div class="section-content">
                       <div id="videos-carousel" class="videos-carousel carouse slide">
@@ -66,11 +66,13 @@
                   </section>
                 </div>
               </div>
+              </br>
+              </br>
               <div class="row">
                 <div class="col-md-2">
-                  <img class="img-responsive" src="<%= asset_path "nut.png"%>" alt=""/>
+                  <img class="img-responsive custom_logo" src="<%= asset_path "nut.png"%>" alt=""/>
                 </div>
-                <article class="col-md-6">
+                <article class="col-md-4">
                   <h4>Nut</h4>
                   <p><i class="fa fa-star"></i> 11B= 6 Sets</li>
                   <p><i class="fa fa-star"></i> 14B= 9 Sets</li>
@@ -80,7 +82,7 @@
                   <p><i class="fa fa-star"></i> 27B= 1 Set</li>
                   <p><i class="fa fa-star"></i> 33B= 1 Set</li>
                 </article>
-                  <div class="col-md-4">
+                  <div class="col-md-6">
                 <section class="video">
                   <div class="section-content">
                     <div id="videos-carousel" class="videos-carousel carousel slide">
@@ -94,11 +96,13 @@
                 </section>
                 </div>
               </div>
+              </br>
+              </br>
               <div class="row">
                 <div class="col-md-2">
-                  <img class="img-responsive" src="<%= asset_path "stamping.png"%>" alt=""/>
+                  <img class="img-responsive custom_logo" src="<%= asset_path "stamping.png"%>" alt=""/>
                 </div>
-                <article class="col-md-6">
+                <article class="col-md-4">
                   <h4>Stamping</h4>
                   <p><i class="fa fa-star"></i> 200 tons – 2 Sets</p>
                   <p><i class="fa fa-star"></i> 160 tons – 3 Sets</p>
@@ -112,7 +116,7 @@
                   <p><i class="fa fa-star"></i> 350 tons – 1 Sets</p>
                   <p><i class="fa fa-star"></i> 400 tons – 1 Sets</p>
                 </article>
-                <div class="col-md-4">
+                <div class="col-md-6">
                   <section class="video">
                     <div class="section-content">
                       <div id="videos-carousel" class="videos-carousel carousel slide">
