--- a/app/views/about/companyfocus.html.erb
+++ b/app/views/about/companyfocus.html.erb
@@ -16,14 +16,17 @@
                 <div class="row page-row">
                   <aside class="page-sidebar col-md-2 col-sm-4 affix-top">
                     <section class="widget">
-                      <ul class="nav">
+                      <ul class="nav custom_font">
                         <li><a href="/about/introduction">Introduction</a></li>
                         <li class="active"><a href="/about/companyfocus">Company Focus</a></li>
                       </ul>
                     </section><!--//widget-->
                   </aside>
                     <article class="welcome col-md-8 col-sm-7">
-                        <h3 class="title">Locksure’s New Plant in Chuanghua Ready to Take off. Automotive Welded Nut Runs in Mass Production by Kelly Wang,Fastener World Inc.</h3>
+                        <h2>Locksure’s New Plant in Chuanghua Ready to Take off. </h2>
+                        <h4 class="title" style="font-style:italic;">
+                          Automotive Welded Nut Runs in Mass Production by Kelly Wang,Fastener World Inc.
+                        </h4>
                         <!--<p><img class="img-responsive" src="assets/images/750x300-about.jpg" alt="" /></p>-->
                         <!--
                           <ul class="custom-list-style">
