--- a/app/views/about/introduction.html.erb
+++ b/app/views/about/introduction.html.erb
@@ -16,7 +16,7 @@
                 <div class="row page-row">
                   <aside class="page-sidebar col-md-2 col-sm-4 affix-top">
                     <section class="widget">
-                      <ul class="nav">
+                      <ul class="nav custom_font">
                         <li class="active"><a href="/about/introduction">Introduction</a></li>
                         <li><a href="/about/companyfocus">Company Focus</a></li>
                       </ul>
