--- a/app/views/catalog/index.html.erb
+++ b/app/views/catalog/index.html.erb
@@ -15,7 +15,7 @@
         <div class="row page-row">
           <aside class="page-sidebar col-md-2 col-sm-4 affix-top">
             <section class="widget">
-                <ul class="nav">
+                <ul class="nav custom_font">
                   <li class="active"><a href="/catalog/index">Catalog</a></li>
                   <li><a href="/catalog/brochure">Brochure</a></li>
                 </ul>
