--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="/assets/plugins/font-awesome/css/font-awesome.css">
   <link rel="stylesheet" href="/assets/plugins/flexslider/flexslider.css">
   <link rel="stylesheet" href="/assets/plugins/pretty-photo/css/prettyPhoto.css">
-  <link href="/assets/favicon.ico" rel="shortcut icon" type="image/x-icon" />
+  <link href="<%= asset_path "favicon.ico"%>" rel="shortcut icon" type="image/x-icon" />
   <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
   <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
