update facilities pages

--- a/app/views/facilities/bolt.html.erb
+++ b/app/views/facilities/bolt.html.erb
@@ -1,7 +1,6 @@
   <div class="content container">
     <div class="page-wrapper">
       <header class="page-heading clearfix">
-        <h1 class="heading-title pull-left">Bolt Former Machine List</h1>
         <div class="breadcrumbs pull-right">
           <ul class="breadcrumbs-list">
               <li class="breadcrumbs-label">You are here:</li>
@@ -12,55 +11,55 @@
         </div>
       </header>
       <div class="page-content"></div>
-        <div class="row page-row">
-            <aside class="page-sidebar col-md-2 col-sm-4 affix-top">
-            <section class="widget">
-                <ul class="nav custom_font">
-                  <li class="active"><a href="/facilities/bolt">Bolt Facility</a></li>
-                  <li><a href="/facilities/nut">Nut Facility</a></li>
-                  <li><a href="/facilities/stamping">Stamping Facility</a></li>
-                </ul>
-                </section><!--//widget-->
+          <aside class="page-sidebar col-md-2 col-sm-4 affix-top">
+          <section class="widget">
+              <ul class="nav custom_font">
+                <li class="active"><a href="/facilities/bolt">Bolt Facility</a></li>
+                <li><a href="/facilities/nut">Nut Facility</a></li>
+                <li><a href="/facilities/stamping">Stamping Facility</a></li>
+              </ul>
+              </section><!--//widget-->
           </aside>
-          <div class="content-wrapper col-md-5 col-sm-4">
 
-            <div class="table-responsive">
-              <table class="table table-striped">
-                <tbody>
-                  <tr><td class="list-font-size">½ 4B4D x 4” = 5 Sets</td></tr>
-                  <tr><td class="list-font-size">½ 5B5D x 6” = 3 Sets</td></tr>
-                  <tr><td class="list-font-size">5/8 4B4D x 6” = 1 Set</td></tr>
-                  <tr><td class="list-font-size">5/8 5B5D x 6” = 1 Set</td></tr>
-                  <tr><td class="list-font-size">¾ 4B4D x 6” = 1 Set</td></tr>
-                  <tr><td class="list-font-size">5/16 3B3D x 2” = 3 Sets</td></tr>
-                  <tr><td class="list-font-size">5/16 4B4D x 3” = 1 Set</td></tr>
-                  <tr><td class="list-font-size">3/8 Tubular Rivet Machine = 2 Sets</td></tr>
-                  <tr><td class="list-font-size">5/16 Tubular Rivet Machine = 9 Sets</td></tr>
-                  <tr><td class="list-font-size">3/16 Tubular Rivet Machine = 2 Sets</td></tr>
-                  <tr><td class="list-font-size">Wire Diameter = 3.0 – 30.0 mm</td></tr>
-                  <tr><td class="list-font-size">Flange Diameter = 65 mm Max</td></tr>
-                </tbody>
-              </table>
+            <div class="content-wrapper col-md-5 col-sm-4">
+              <img class="img-responsive" src="<%= asset_path "facilities/bolt.png"%>" alt=""/>
+              <br />
             </div>
-          </div>
-          <div class="content-wrapper col-md-5 col-sm-4">
-            <img class="img-responsive" src="<%= asset_path "facilities/bolt.png"%>" alt=""/>
-            <br />
-          <div class="panel panel-default" style="left:60px;"><!--//video-->
-            <section class="video panel-body">
-              <div class="section-content">
-                <div id="videos-carousel" class="videos-carousel carousel slide">
-                  <div class="carousel-inner">
-                    <div class="item active" align="center">
-                      <iframe class="video-iframe" src="//www.youtube.com/embed/7htZkSe-MfY?rel=0&amp;wmode=transparent" frameborder="0" allowfullscreen="" width="100%" height="360" ></iframe>
+            <div class="content-wrapper col-md-5 col-sm-4">
+                <div class="section-content">
+                  <div id="videos-carousel" class="videos-carousel carousel slide">
+                    <div class="carousel-inner">
+                      <div class="item active" align="center">
+                        <iframe class="video-iframe" src="//www.youtube.com/embed/7htZkSe-MfY?rel=0&amp;wmode=transparent" frameborder="0" allowfullscreen="" width="100%" height="299" ></iframe>
+                      </div>
                     </div>
-                  </div>
-                </div><!--//videos-carousel-->
-                <p class="description"></p>
-              </div><!--//section-content-->
-            </section>
-          </div>
-          </div>
+                  </div><!--//videos-carousel-->
+                  <p class="description"></p>
+                </div><!--//section-content-->
+            </div>
+
+            <div class="content-wrapper col-md-10 col-sm-4 col-md-offset-2">
+              <h1 align="center" class="heading-title">Bolt Former Machine List</h1>
+              <div class="table-responsive">
+                <table class="table table-striped">
+                  <tbody>
+                    <tr><td class="list-font-size">½ 4B4D x 4” = 5 Sets</td></tr>
+                    <tr><td class="list-font-size">½ 5B5D x 6” = 3 Sets</td></tr>
+                    <tr><td class="list-font-size">5/8 4B4D x 6” = 1 Set</td></tr>
+                    <tr><td class="list-font-size">5/8 5B5D x 6” = 1 Set</td></tr>
+                    <tr><td class="list-font-size">¾ 4B4D x 6” = 1 Set</td></tr>
+                    <tr><td class="list-font-size">5/16 3B3D x 2” = 3 Sets</td></tr>
+                    <tr><td class="list-font-size">5/16 4B4D x 3” = 1 Set</td></tr>
+                    <tr><td class="list-font-size">3/8 Tubular Rivet Machine = 2 Sets</td></tr>
+                    <tr><td class="list-font-size">5/16 Tubular Rivet Machine = 9 Sets</td></tr>
+                    <tr><td class="list-font-size">3/16 Tubular Rivet Machine = 2 Sets</td></tr>
+                    <tr><td class="list-font-size">Wire Diameter = 3.0 – 30.0 mm</td></tr>
+                    <tr><td class="list-font-size">Flange Diameter = 65 mm Max</td></tr>
+                  </tbody>
+                </table>
+              </div>
+            </div>
+
         </div>
       </div>
     </div>
