--- a/app/views/facilities/nut.html.erb
+++ b/app/views/facilities/nut.html.erb
@@ -1,7 +1,6 @@
   <div class="content container">
     <div class="page-wrapper">
       <header class="page-heading clearfix">
-        <h1 class="heading-title pull-left">Nut Former Machine List</h1>
         <div class="breadcrumbs pull-right">
           <ul class="breadcrumbs-list">
               <li class="breadcrumbs-label">You are here:</li>
@@ -12,7 +11,6 @@
         </div>
       </header>
       <div class="page-content"></div>
-        <div class="row page-row">
           <aside class="page-sidebar col-md-2 col-sm-4 affix-top">
             <section class="widget">
                 <ul class="nav custom_font">
@@ -22,7 +20,27 @@
                 </ul>
             </section><!--//widget-->
           </aside>
+
           <div class="content-wrapper col-md-5 col-sm-4">
+            <img class="img-responsive" src="<%= asset_path "facilities/nut.png"%>" alt=""/>
+            <br />
+          </div>
+          <div class="content-wrapper col-md-5 col-sm-4">
+            <div class="section-content">
+              <div id="videos-carousel" class="videos-carousel carousel slide">
+                <div class="carousel-inner">
+                  <div class="item active" align="center">
+                    <iframe class="video-iframe" src="//www.youtube.com/embed/IOsvXA_L35I?rel=0&amp;wmode=transparent" frameborder="0" allowfullscreen="" width="100%" height="295" ></iframe>
+                  </div>
+                </div>
+              </div><!--//videos-carousel-->
+              <p class="description"></p>
+            </div><!--//section-content-->
+          </div>
+
+
+          <div class="content-wrapper col-md-10 col-sm-8 col-md-offset-2">
+          <h1 class="heading-title" align="center">Nut Former Machine List</h1>
            <div class="table-responsive">
              <table class="table table-striped">
                <tbody>
@@ -36,24 +54,6 @@
                </tbody>
              </table>
            </div>
-          </div>
-          <div class="content-wrapper col-md-5 col-sm-4">
-            <img class="img-responsive" src="<%= asset_path "facilities/nut.png"%>" alt=""/>
-            <br />
-            <div class="panel panel-default" style="left:60px;"><!--//video-->
-              <section class="video panel-body">
-                <div class="section-content">
-                  <div id="videos-carousel" class="videos-carousel carousel slide">
-                    <div class="carousel-inner">
-                      <div class="item active" align="center">
-                        <iframe class="video-iframe" src="//www.youtube.com/embed/IOsvXA_L35I?rel=0&amp;wmode=transparent" frameborder="0" allowfullscreen="" width="100%" height="360" ></iframe>
-                      </div>
-                    </div>
-                  </div><!--//videos-carousel-->
-                  <p class="description"></p>
-                </div><!--//section-content-->
-              </section>
-            </div>
           </div>
         </div>
       </div>
