--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,7 +7,7 @@
         <h1 class="logo col-md-4 col-sm-4">
             <!--<%= link_to("LOCKSURE", root_path) %>-->
           <a href="/">
-            <img src="<%= asset_path "locksure_logo.png"%>" alt="logo" />
+            <img class="img-responsive custom_nav_logo" src="<%= asset_path "locksure_logo3.png"%>" alt="logo" />
           </a>
         </h1><!--//logo-->
         <div class="info col-md-8 col-sm-8">
