update stamping video

--- a/app/views/facilities/stamping.html.erb
+++ b/app/views/facilities/stamping.html.erb
@@ -30,7 +30,7 @@
               <div id="videos-carousel" class="videos-carousel carousel slide">
                 <div class="carousel-inner">
                   <div class="item active" align="center">
-                    <iframe class="video-iframe" src="//www.youtube.com/embed/pQRZ8dWAcUg?rel=0&amp;wmode=transparent" frameborder="0" allowfullscreen="" width="100%" height="348" ></iframe>
+                    <iframe class="video-iframe" src="//www.youtube.com/embed/wX7mOztlVec?rel=0&amp;wmode=transparent" frameborder="0" allowfullscreen="" width="100%" height="348" ></iframe>
                   </div>
                 </div>
               </div><!--//videos-carousel-->
