--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -122,7 +122,7 @@
                       <div id="videos-carousel" class="videos-carousel carousel slide">
                         <div class="carousel-inner">
                             <div class="item active">
-                              <iframe class="video-iframe" src="https://www.youtube.com/embed/pQRZ8dWAcUg" frameborder="0" allowfullscreen=""></iframe>
+                              <iframe class="video-iframe" src="https://www.youtube.com/embed/wX7mOztlVec" frameborder="0" allowfullscreen=""></iframe>
                           </div>
                         </div>
                       </div><!--//videos-carousel-->
