modify watermark style

--- a/app/assets/stylesheets/about.css.scss
+++ b/app/assets/stylesheets/about.css.scss
@@ -6,7 +6,7 @@
 
 .watermark:after {
   content: "";
-  background-image: image-url('watermark.jpg');
+  background-image: image-url('strip3-1.jpg');
   background-repeat:no-repeat;
   background-position:center;
   opacity: 0.1;
