add anti-bribery page

--- a/app/views/about/companyfocus.html.erb
+++ b/app/views/about/companyfocus.html.erb
@@ -19,6 +19,7 @@
                       <ul class="nav custom_font">
                         <li><a href="/about/introduction">Introduction</a></li>
                         <li class="active"><a href="/about/companyfocus">Company Focus</a></li>
+                        <li><a href="/about/anti-bribery">Anti-Bribery</a></li>
                       </ul>
                     </section><!--//widget-->
                   </aside>
